# Face-VectorDB-Login

./: README.md  face_vectordb_login_cli.py  face_vectordb_login_insightface.py  face_vectordb_register_cli.py  init_face_vectordb.py  requirements.txt  setup.cfg
face-vectordb-login-flask/: __init__.py  pgsql_conn.py
face-vectordb-login-flask/app/: pgsql_config.yaml  pgsql_conn.py
face-vectordb-login-flask/app/FVflask_usermode/: __init__.py  face_vectordb_login_insightface_flask.py  views.py
face-vectordb-login-flask/insightface/models/: README.md
face-vectordb-login-flask/static/css/: login.css  register.css  style.css
face-vectordb-login-flask/static/js/: login.js  register.js
face-vectordb-login-flask/templates/: index.html  login.html  register.html
face-vectordb-login-selenium/: all_seleniunm_fvdbl.py  login_seleniunm_fvdbl.py  register_seleniunm_fvdbl.py
