# https://gitee.com/intelligence-vision/face-vectordb-login
# 本地使用:
# 安装方法：pip install pre-commit
# 使用方法：pre-commit run --all-files
# sudo apt-get install python3-distutils

[metadata]
license_file = LICENSE
description_file = README.md


[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --doctest-modules
    --durations=25
    --color=yes
